        finished with sending data

        * nsd/tcltime.c: Silence strict-alis rules related warnings
	* include/ns.h:
	* nsd/driver.c:
	* nsd/adprequest.c:
	* nsd/connio.c: Mark the connection which sent data via writer 
	thread with specal flag which wil be honored by NsAdpFlush

	* contrib/examples: Updated exampls with better description and fixed
	writer example

2008-08-23  Stephen  <sdeasey@users.sf.net>

	* doc/*:
	* nsdb/doc/*:
	* nsproxy/doc/*:
	* nslog/doc/*: Convert some more documentation to new doctools
	syntax; fix cross-references; make module docs per-module.

2008-08-19  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/adpeval.c:
	* nsd/fastpath.c: Fix bug with file name -> stat -> cache lookup.
	The intermediate stage of using the inode as the cache key is not
	reliable, as when the file is replaced within the granularity of
	the mtime an inode may be assigned which has already been seen and
	is still in the cache. The result is an information leak:
	the old contents of file a.html may appear when file b.html
	is requested. Reported by John Caruso on the AOLserver
	mailing list.
	* nsd/init.c:
	* nsd/modload.c: Remove dead code.

2008-06-29  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/conn.c: Fixed bug in switch statement after Auth index,
	did not have break.

2008-06-25  Vlad Seryakov <seryakov@users.sf.net>

        * include/ns.h:
        * nsd/nsd.h:
        * nsd/conn.c:
        * nsd/tclvar.c: Made NSV API public, introduced new Ns_ConnNsvXXXX and
        NsNsvXXX families of functions that can be used inside the server or a connection
        to access NSV arrays

2008-05-27  Daniel P. Stasinski <daniel@avenues.org>

	* tests/ns_adp_compress.test: Updating result for ns_adp_compress.test

2008-05-23  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/task.c:
	* nsd/tclhttp.c: Not sure i can explain it but on Linux with fast Internet 
	connection ns_http does not work when after write shutdown(sock, 1) is called.