@@ -14,6 +14,9 @@
 	* contrib/examples: Updated exampls with better description and fixed
 	writer example
 
+	* nsd/driver.c: Added logging flag to driver serverconfiglogging
+	which enables all related to config errors to be logged
+
 2008-08-23  Stephen  <sdeasey@users.sf.net>
 
 	* doc/*:
